Implement user role management and enhance security features; add role-based access control, custom success handler, and user detail service; update login page for improved user experience.